#236 | Cache Synchronisation Handler and Warmup Mechanism (#244)